Modulo uno 80% termiando aun sin animaciones

--- a/src/app/pages/components/actividad-m1/actividad-m1.component.html
+++ b/src/app/pages/components/actividad-m1/actividad-m1.component.html
@@ -101,7 +101,7 @@
 
 <section class="que_es_cooperativismo">
   <div class="container">
-    <div class="row justify-content-around">
+    <div class="row justify-content-around align-items-center">
       <div class="hojaback col-md-12 col-lg-6">
         <h2 class="text-end p-3">¿QUÉ ES EL COOPERATIVISMO?</h2>
         <p class="text-end">Es un movimiento socioeconómico basado en
@@ -215,8 +215,7 @@
 
 <section class="linea_tiempo">
   <div class="container">
-    <div class="primera-cooperativa">
-      <div class="row justify-content-center flex-column-reverse flex-md-row pb-5">
+      <div class="row flex-column-reverse flex-md-row justify-content-evenly pb-5">
         <div class="col-12 col-md-5 d-flex justify-content-center align-items-center">
           <div class="text-content text-center text-md-start">
             <h2>Primer Cooperativa</h2>
@@ -232,15 +231,14 @@
         <div class="col-md-1 d-none d-md-flex align-items-center flex-wrap">
           <div class="linea-abajo-turqueza"></div>
         </div>
-        <div class="col-12 col-md-5 d-flex align-items-center">
+        <div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
           <div class="anio-1844"></div>
         </div>
       </div>
-    </div>
 
-    <div class="fredereick-w-raiffeisen">
-      <div class="row justify-content-center flex-column flex-md-row pb-5">
-        <div class="col-12 col-md-5 d-flex align-items-center">
+
+      <div class="row flex-column flex-md-row justify-content-evenly pb-5">
+        <div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
           <div class="anio-1864"></div>
         </div>
         <div class="col-md-1 d-none d-md-flex align-items-center flex-wrap">
@@ -265,10 +263,8 @@
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="juan-b-godin">
-      <div class="row justify-content-center flex-column-reverse flex-md-row">
+      <div class="row flex-column-reverse justify-content-evenly flex-md-row">
         <div class="col-12 col-md-5 d-flex justify-content-center align-items-center">
           <div class="text-content text-center text-md-start">
             <h2>Juan Bautista Godin</h2>
@@ -289,12 +285,11 @@
         <div class="col-md-1 d-none d-md-flex align-items-center flex-wrap">
           <div class="linea-abajo-turqueza"></div>
         </div>
-        <div class="col-12 col-md-5 d-flex align-items-center">
+        <div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
           <div class="anio-1877"></div>
         </div>
       </div>
     </div>
-  </div>
 
 </section>
 
@@ -337,7 +332,7 @@
 
   <div class="container">
     <div class="alianza-aci">
-      <div class="row justify-content-center flex-column-reverse flex-md-row pb-5">
+      <div class="row flex-column-reverse flex-md-row justify-content-evenly pb-5">
         <div class="col-12 col-md-5 d-flex justify-content-center align-items-center">
           <div class="text-content text-center text-md-start">
             <h2>La Alianza Cooperativa Internacional (ACI)</h2>
@@ -360,7 +355,7 @@
     </div>
 
     <div class="federacion-nacional-sueca">
-      <div class="row justify-content-center flex-column flex-md-row pb-5">
+      <div class="row flex-column flex-md-row justify-content-evenly pb-5">
         <div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
           <div class="anio-1899"></div>
         </div>
@@ -385,7 +380,7 @@
     </div>
 
     <div class="alphonse-desjardins">
-      <div class="row justify-content-center flex-column-reverse flex-md-row">
+      <div class="row flex-column-reverse flex-md-row justify-content-evenly">
         <div class="col-12 col-md-5 d-flex justify-content-center align-items-center">
           <div class="text-content text-center text-md-start">
             <h2>Alphonse Desjardins</h2>
@@ -505,7 +500,7 @@
 
     <div class="row">
       <div class="col-12">
-        <div class="card-inf-prehispanica">
+        <div class="card-inf-prehispanica" style="margin: 20px auto">
           <p>
             En la época prehispánica, en la Gran Tenochtitlan de México
             existía una importante organización de pueblos que, bajo el
@@ -571,7 +566,7 @@
 <section class="elias_calles">
 
   <div class="container">
-    <div class="hoja-cuaderno">
+    <div class="hoja-cuaderno" style="margin: 30px auto;">
       <p>
         El Cooperativismo ha existido en México desde finales del siglo XIX y principios
         del siglo XX, a través de Cajas de Ahorro Rurales que tuvieron como propósito
@@ -597,7 +592,7 @@
     <img class="cinta-precidente" src="assets/presidente.svg" alt="">
 
 
-    <div class="epoca-pos">
+    <div class="epoca-pos" style="margin: 30px 0;">
       <p>
         Durante la época posrevolucionaria, el Cooperativismo comenzó a crecer, a
         pesar de no existir todavía un marco jurídico propio; este expresidente fue un
@@ -728,7 +723,8 @@
         <tr>
           <div class="espace">
             <td class="año">1988</td>
-            <td class="desc">Se reconocen 8,017 Cooperativas en el país (72% Cooperativas de Producción, 28% de consumo)con 349 mil cooperativistas.</td>
+            <td class="desc">Se reconocen 8,017 Cooperativas en el país (72% Cooperativas de Producción, 28% de
+              consumo)con 349 mil cooperativistas.</td>
           </div>
         </tr>
         <tr>
@@ -764,21 +760,28 @@
         <tr>
           <div class="espace">
             <td class="año">2009</td>
-            <td class="desc">Se expide la Ley para Regular las Actividades de las Sociedades Cooperativas de Ahorro y Préstamo</td>
+            <td class="desc">Se expide la Ley para Regular las Actividades de las Sociedades Cooperativas de Ahorro y
+              Préstamo</td>
           </div>
         </tr>
         <tr>
           <div class="espace">
             <td class="año">2011</td>
             <td class="desc">Por acuerdo de la ONU, se crea en el 2012 Año Internacional de las Cooperativas.
-              Reunión de la Alianza Cooperativa Internacional en Cancún Quinta Roo, con la presencia del Presidente Felipe Calderón Hinojosa y representantes de 2,200 organismos cooperativos del mundo, además, se instaura el Año Internacional de las Cooperativas.</td>
+              Reunión de la Alianza Cooperativa Internacional en Cancún Quinta Roo, con la presencia del Presidente
+              Felipe Calderón Hinojosa y representantes de 2,200 organismos cooperativos del mundo, además, se instaura
+              el Año Internacional de las Cooperativas.</td>
           </div>
         </tr>
         <tr>
           <div class="espace">
             <td class="año">2012</td>
-            <td class="desc">Por iniciativa de los cooperativistas, se crea en la Cámara de Diputados la Medalla al Mérito Cooperativo. El padre Manuel Velázquez, uno de los fundadores del movimiento cajista mexicano, recibe la primera medalla en una sesión solemne.
-              La Comisión de Fomento Económico del Senado, adiciona a la Ley para Regular las Actividades de las Sociedades Cooperativas de Ahorro y Préstamo, las Disposiciones de Carácter General específicas al sector.</td>
+            <td class="desc">Por iniciativa de los cooperativistas, se crea en la Cámara de Diputados la Medalla al
+              Mérito Cooperativo. El padre Manuel Velázquez, uno de los fundadores del movimiento cajista mexicano,
+              recibe la primera medalla en una sesión solemne.
+              La Comisión de Fomento Económico del Senado, adiciona a la Ley para Regular las Actividades de las
+              Sociedades Cooperativas de Ahorro y Préstamo, las Disposiciones de Carácter General específicas al sector.
+            </td>
           </div>
         </tr>
       </tbody>
@@ -788,96 +791,140 @@
 
 <section class="simbolos">
 
-  <h2>SÍMBOLOS</h2>
-  <h2>BANDERA</h2>
+  <div class="container">
 
-  <p>
-    En la bandera de la Cooperación se recogen los colores de
-    todas las banderas del mundo como mensaje de amor
-    Universal. Este simbolo nos recuerda un pacto divino de paz
-    para la humanidad entera, que supera las diferencias
-    políticas, económicas, sociales, raciales o religiosas.
 
-    Es decir, la esperanza de la humanidad de lograr un mundo
-    mejor donde reine la libertad, la dignidad, la justicia social y
-    la solidaridad.
-  </p>
+    <div class="row">
+      <div class="col-12 col-md-4">
+        <h2 class="simbolos-title text-center">SÍMBOLOS</h2>
+      </div>
+      <div class="col-12 col-md-4">
+        <h2 class="bandera text-center">BANDERA</h2>
+      </div>
+      <div class="d-none d-md-flex col-md-4">
+        <img src="assets/bandera-top.svg" class="bandera-top">
+      </div>
+    </div>
 
-  <p>
-    La utilización de estos siete colores del arco iris para la Bandera del Cooperativismo,
-    fue propuesta por Charles Gide, reconocido cooperativista francés, que, en el año
-    1923, en el transcurso de una reunión de la Alianza Cooperativa Internacional (ACI)
-    realizada en la ciudad de Gante, Bélgica, fue aprobada como bandera y simbolo
-    del Cooperativismo.
+    <p class="hoja-cuad-bandera">
+      En la bandera de la Cooperación se recogen los colores de
+      todas las banderas del mundo como mensaje de amor
+      Universal. Este simbolo nos recuerda un pacto divino de paz
+      para la humanidad entera, que supera las diferencias
+      políticas, económicas, sociales, raciales o religiosas.
 
-    Gide siempre manifestó que la idea original del arco iris, emanaba de Charles
-    Fourier, otro cooperativista francés reconocido en el ámbito mundial.
+      Es decir, la esperanza de la humanidad de lograr un mundo
+      mejor donde reine la libertad, la dignidad, la justicia social y
+      la solidaridad.
+    </p>
 
-    La nueva bandera que identifica al Cooperativismo, fue adoptada en abril de 2001
-    por decisión de la Asamblea de la Alianza Cooperativa Internacional (ACI) debido
-    a que la anterior bandera que identificaba al sector cooperativo, es utilizada desde
-    hace varios años para identificar a “grupos no cooperativos", provocando
-    confusión en diversos países del mundo. La nueva versión muestra palomas de la
-    paz que emergen de un arco iris y representa la unidad de los diversos miembros de
-    la ACI.
+    <div class="hoja-bottom-bandera">
+      La utilización de estos siete colores del arco iris para la Bandera del Cooperativismo,
+      fue propuesta por Charles Gide, reconocido cooperativista francés, que, en el año
+      1923, en el transcurso de una reunión de la Alianza Cooperativa Internacional (ACI)
+      realizada en la ciudad de Gante, Bélgica, fue aprobada como bandera y simbolo
+      del Cooperativismo.
 
-    Son los 7 colores del prisma como elementos de la gran luz que ilumina al mundo.
-    Debe ser el simbolo de alianza de todos los cooperativistas que sueñan y trabajan
-    por una transformación social sobre una base de convivencia más justa.
+      Gide siempre manifestó que la idea original del arco iris, emanaba de Charles
+      Fourier, otro cooperativista francés reconocido en el ámbito mundial.
 
-    Cada uno de estos colores tiene su propio significado:
-  </p>
+      La nueva bandera que identifica al Cooperativismo, fue adoptada en abril de 2001
+      por decisión de la Asamblea de la Alianza Cooperativa Internacional (ACI) debido
+      a que la anterior bandera que identificaba al sector cooperativo, es utilizada desde
+      hace varios años para identificar a “grupos no cooperativos", provocando
+      confusión en diversos países del mundo. La nueva versión muestra palomas de la
+      paz que emergen de un arco iris y representa la unidad de los diversos miembros de
+      la ACI.
 
-  <ul>
-    <li>Rojo: La universalidad.</li>
-    <li>Anaranjado: La democracia.</li>
-    <li>Amarillo: La justicia.</li>
-    <li>Verde: La economía.</li>
-    <li>AZUL turquesa: La difusión.</li>
-    <li>Azul: La unidad.</li>
-    <li>Violeta:talibertad.</li>
-  </ul>
+      Son los 7 colores del prisma como elementos de la gran luz que ilumina al mundo.
+      Debe ser el simbolo de alianza de todos los cooperativistas que sueñan y trabajan
+      por una transformación social sobre una base de convivencia más justa.
 
-  <p>
-    El fondo blanco: representa el sentido de pertenencia
-    e identificación del movimiento Cooperativo.
-  </p>
+      Cada uno de estos colores tiene su propio significado:
+
+      <ul>
+        <li style="background-color: #dd3c14;">Rojo: La universalidad.</li>
+        <li style="background-color: #dda80e;">Anaranjado: La democracia.</li>
+        <li style="background-color: #dcdd3b;">Amarillo: La justicia.</li>
+        <li style="background-color: #09913d;">Verde: La economía.</li>
+        <li style="background-color: #1c8ecc;">AZUL turquesa: La difusión.</li>
+        <li style="background-color: #2b307a;">Azul: La unidad.</li>
+        <li style="background-color: #6a3a70;">Violeta:talibertad.</li>
+      </ul>
+
+      <p>
+        El fondo blanco: representa el sentido de pertenencia
+        e identificación del movimiento Cooperativo.
+      </p>
+
+      <img class="bandera-bottom" src="assets/bandera_blanca.svg" alt="">
+
+    </div>
+
+
+  </div>
 
 </section>
 
 <section class="sig-pinos">
 
-  <p>Las conjunciones de los siete colores
-    representan:</p>
-  <ul>
-    <li>La unidad en la diversidad.</li>
-    <li>La paz después de las tormentas y el
-      augurio de buenos tiempos.</li>
-  </ul>
+  <div class="container">
 
-  <h2>LOS PINOS</h2>
+    <div class="row flex-column flex-md-row align-items-center justify-content-center">
+      <div class="col-12 col-md-4">
+        <img class="tv-lgbt" src="assets/tv-lgbt.svg" alt="">
+      </div>
+      <div class="col-12 col-md-8">
+        <div class="hoja-colores">
+          <p>Las conjunciones de los siete colores
+            representan:</p>
+          <ul>
+            <li>La unidad en la diversidad.</li>
+            <li>La paz después de las tormentas y el
+              augurio de buenos tiempos.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
-  <p>El emblema o símbolo más usado, después de esta bandera
-    y sobre todo en América, es un círculo color oro con 2 pinos
-    verdes al centro, rodeados por una circunferencia verde,
-    donde se apoyan los pinos.
+    <div class="los-pinos">
+      <div class="row">
+        <div class="col-12 col-md-4">
+          <img src="assets/pin-pinos.svg" alt="">
+        </div>
+        <div class="col-12 col-md-8">
 
-    Significado de cada una de sus partes</p>
+          <div class="text-desc">
 
-  <p><strong>EL PINO:</strong> El árbol del pino, se consideraba en la antigúedad
-    como símbolo de inmortalidad y de fecundidad, era
-    respetado por su capacidad de supervivencia en las tierras
-    menos fecundas y la sorprendente capacidad de
-    multiplicación.</p>
-  <p><strong>EL CÍRCULO:</strong> Representa la vida eterna, además la idea del
-    mundo reflejando así, la universalidad.</p>
-  <p><strong>EL VERDE OSCURO:</strong> Se asemeja al color de la clorofila, donde
-    nace el principio vital de la naturaleza.</p>
-  <p><strong>EL AMARILLO:</strong> Representa el sol, fuente permanente de
-    energía, calor y vida.</p>
-  <p><strong>EL EMBLEMA:</strong> Un círculo que abraza dos árboles del pino,
-    indica la unión del movimiento, la inmortalidad de sus
-    principios, la fecundidad de sus seguidores, adicionalmente
-    se proyectan en lo alto, intentando crecer cada vez más.</p>
+            <h2><strong>LOS PINOS</strong></h2>
+
+            <p>El emblema o símbolo más usado, después de esta bandera
+              y sobre todo en América, es un círculo color oro con 2 pinos
+              verdes al centro, rodeados por una circunferencia verde,
+              donde se apoyan los pinos.
+
+              Significado de cada una de sus partes</p>
+
+            <p><strong>EL PINO:</strong> El árbol del pino, se consideraba en la antigúedad
+              como símbolo de inmortalidad y de fecundidad, era
+              respetado por su capacidad de supervivencia en las tierras
+              menos fecundas y la sorprendente capacidad de
+              multiplicación.</p>
+            <p><strong>EL CÍRCULO:</strong> Representa la vida eterna, además la idea del
+              mundo reflejando así, la universalidad.</p>
+            <p><strong>EL VERDE OSCURO:</strong> Se asemeja al color de la clorofila, donde
+              nace el principio vital de la naturaleza.</p>
+            <p><strong>EL AMARILLO:</strong> Representa el sol, fuente permanente de
+              energía, calor y vida.</p>
+            <p><strong>EL EMBLEMA:</strong> Un círculo que abraza dos árboles del pino,
+              indica la unión del movimiento, la inmortalidad de sus
+              principios, la fecundidad de sus seguidores, adicionalmente
+              se proyectan en lo alto, intentando crecer cada vez más.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 </section>
