--- a/src/app/pages/page/modulo1/modulo1.component.html
+++ b/src/app/pages/page/modulo1/modulo1.component.html
@@ -22,59 +22,63 @@
     </div>
   </div>
 
-  <div class="">
+  <div class="CONTAINER__TEMA">
 
     <actividadM1></actividadM1>
 
   </div><!--CIERRE DEL CONTAINER__TEMA, CONTENEDOR DLE PDF-->
 
 
+  <div class="container">
 
-  <div class="row" style="--bs-gutter-x: 0rem">
-    <!-- Lado izquierdo -->
-    <div class="col-xl-4 col-xxl-6 col-sm-12">
-      <!-- SECCION DE LA ACTIVIDAD -->
-      <section class="container__actividad d-flex flex-column align-items-center">
+    <div class="row my-5" style="--bs-gutter-x: 0rem;">
+      <!-- Lado izquierdo -->
+      <div class="col-xl-6 col-sm-12">
+        <!-- SECCION DE LA ACTIVIDAD -->
+        <section class="container__actividad d-flex flex-column align-items-center">
 
-        <div class="titulo__actividad text-center">
-          <h1>Actividad: Crucigrama</h1>
-        </div>
+          <div class="titulo__actividad text-center">
+            <h1>Actividad: Crucigrama</h1>
+          </div>
 
-        <div class="txt__actividad">
-          <p>
-            Con esta actividad podrás reforzar parte de lo leído en estos temas, apoyando a la retroalimentación y
-            aprendizaje de los conceptos aquí mencionados.
-          </p>
-          <h3>Horizontales</h3>
-          <ul class="sin-vinetas">
-            <li>4. Alianza Cooperativa Internacional.</li>
-            <li>5. Conferencia Latinoamericana de Cooperativas de Ahorro y Crédito.</li>
-            <li>8. Lugar donde aparecen las Cooperativas de Crédito orientado hacia los campesinos.</li>
-            <li>9. Ciudad de Edad Antigua donde comenzaron las precooperativas.</li>
-            <li>10. Precursor del Cooperativismo.</li>
-          </ul>
-          <h3>Verticales</h3>
-          <ul class="sin-vinetas">
-            <li>1. Periodista canadiense que llevó el cooperativismo a su país y América del norte.</li>
-            <li>2. País en el que se organizó la Cooperativa de Profesionales.</li>
-            <li>3. Pionero del cooperativismo mexicano, por promulgar la Primera Ley Cooperativa.</li>
-            <li>6. El trabajo cooperativo en la estructura del imperio de Anáhuac en Tenochtitlan.</li>
-            <li>7. Padre del Cooperativismo.</li>
-          </ul>
-        </div>
-        <!--BOTON PARA APARECER EL CRUCIGRAMA-->
-        <input id="btnComenzar" (click)="changeStyles('mostrarCrucigrama')" type="button" value="Comenzar">
+          <div class="txt__actividad">
+            <p>
+              Con esta actividad podrás reforzar parte de lo leído en estos temas, apoyando a la retroalimentación y
+              aprendizaje de los conceptos aquí mencionados.
+            </p>
+            <h3>Horizontales</h3>
+            <ul class="sin-vinetas">
+              <li>4. Alianza Cooperativa Internacional.</li>
+              <li>5. Conferencia Latinoamericana de Cooperativas de Ahorro y Crédito.</li>
+              <li>8. Lugar donde aparecen las Cooperativas de Crédito orientado hacia los campesinos.</li>
+              <li>9. Ciudad de Edad Antigua donde comenzaron las precooperativas.</li>
+              <li>10. Precursor del Cooperativismo.</li>
+            </ul>
+            <h3>Verticales</h3>
+            <ul class="sin-vinetas">
+              <li>1. Periodista canadiense que llevó el cooperativismo a su país y América del norte.</li>
+              <li>2. País en el que se organizó la Cooperativa de Profesionales.</li>
+              <li>3. Pionero del cooperativismo mexicano, por promulgar la Primera Ley Cooperativa.</li>
+              <li>6. El trabajo cooperativo en la estructura del imperio de Anáhuac en Tenochtitlan.</li>
+              <li>7. Padre del Cooperativismo.</li>
+            </ul>
+          </div>
+          <!--BOTON PARA APARECER EL CRUCIGRAMA-->
+          <input id="btnComenzar" (click)="changeStyles('mostrarCrucigrama')" type="button" value="Comenzar">
 
-      </section>
+        </section>
+      </div>
+
+      <!-- Lado derecho -->
+      <div class="col-xl-6  col-sm-12">
+
+        <shared-crucigrama [display]="display" (mostrarRetro)="receiveValue($event)"></shared-crucigrama>
+
+      </div>
     </div>
 
-    <!-- Lado derecho -->
-    <div class="col-xl-8 col-xxl-6  col-sm-12">
-
-      <shared-crucigrama [display]="display" (mostrarRetro)="receiveValue($event)"></shared-crucigrama>
-
-    </div>
   </div>
+
 
 
 
@@ -102,7 +106,7 @@
 
     </div>
 
-    <div class="text-center container-fluid" [ngClass]="{'finalizado': finalizadoP, 'noFinalizado': !finalizadoP }">
+    <div class="text-center container" [ngClass]="{'finalizado': finalizadoP, 'noFinalizado': !finalizadoP }">
       <img src="/assets/aplause.gif" alt="Aplauso gif" width="120px">
       <h3 class="fs-2"><strong> FELICIDADES COMPLETASTE EXITOSAMENTE EL MODULO 1 </strong></h3>
       <p class="fs-3">Tu avance ha sido guardado y aparecera en tu perfil</p>
